# Cyping

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: array_utils.h  ascii_codes.h  file_utils.h  input_utils.h  output_utils.h  phrase.h  random.h  stest.h  stest_colors.h  stest_logic.h  stest_statistic.h  string_utils.h  user_io.h
src/: array_utils.c  file_utils.c  input_utils.c  main.c  output_utils.c  phrase.c  random.c  stest.c  stest_colors.c  stest_logic.c  stest_statistic.c  string_utils.c  user_io.c
